[gd_scene load_steps=2 format=3 uid="uid://dxpflo81fh6q"]

[ext_resource type="Script" uid="uid://c7jftnrtl82eh" path="res://books/blockBook/BlockBook.gd" id="1_ee0dj"]

[node name="BlockBook" type="MarginContainer"]
custom_minimum_size = Vector2(220, 580)
offset_right = 220.0
offset_bottom = 580.0
size_flags_vertical = 0
script = ExtResource("1_ee0dj")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="Button" type="Button" parent="ScrollContainer"]
layout_mode = 2
toggle_mode = true

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer/Button"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/Button/MarginContainer"]
custom_minimum_size = Vector2(200, 560)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Cover" type="TextureRect" parent="ScrollContainer/Button/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 256)
layout_mode = 2
expand_mode = 1

[node name="Info" type="VBoxContainer" parent="ScrollContainer/Button/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="RichTextLabel" parent="ScrollContainer/Button/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
fit_content = true

[node name="Reading" type="OptionButton" parent="ScrollContainer/Button/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
mouse_default_cursor_shape = 2
selected = 0
fit_to_longest_item = false
item_count = 7
popup/item_0/text = "Nenhum"
popup/item_0/id = 0
popup/item_1/text = "Lendo"
popup/item_1/id = 1
popup/item_2/text = "Planejo ler"
popup/item_2/id = 2
popup/item_3/text = "Completei"
popup/item_3/id = 3
popup/item_4/text = "Dando um tempo"
popup/item_4/id = 4
popup/item_5/text = "Re-lendo"
popup/item_5/id = 5
popup/item_6/text = "Larguei"
popup/item_6/id = 6

[node name="AddListButton" type="Button" parent="ScrollContainer/Button/MarginContainer/VBoxContainer/Info"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "+ Adicionar a lista"

[node name="Stars" type="SpinBox" parent="ScrollContainer/Button/MarginContainer/VBoxContainer/Info"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
max_value = 10.0
suffix = "Estrelas"

[node name="Tags" type="ScrollContainer" parent="ScrollContainer/Button/MarginContainer/VBoxContainer/Info"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="FlowContainer" type="FlowContainer" parent="ScrollContainer/Button/MarginContainer/VBoxContainer/Info/Tags"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TagsText" type="RichTextLabel" parent="ScrollContainer/Button/MarginContainer/VBoxContainer/Info/Tags/FlowContainer"]
layout_mode = 2
text = "Tags: "
fit_content = true
scroll_active = false
autowrap_mode = 0

[node name="Buttons" type="HBoxContainer" parent="ScrollContainer/Button/MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="NewButton" type="Button" parent="ScrollContainer/Button/MarginContainer/VBoxContainer/Buttons"]
modulate = Color(0.5568628, 1, 0.4117647, 1)
layout_mode = 2
size_flags_horizontal = 2
mouse_default_cursor_shape = 2
text = "Abrir"

[node name="EditButton" type="Button" parent="ScrollContainer/Button/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Editar"

[node name="DeleteButton" type="Button" parent="ScrollContainer/Button/MarginContainer/VBoxContainer/Buttons"]
modulate = Color(1, 0.4117647, 0.4117647, 1)
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Excluir"

[connection signal="toggled" from="ScrollContainer/Button" to="." method="_on_button_toggled"]
[connection signal="item_selected" from="ScrollContainer/Button/MarginContainer/VBoxContainer/Info/Reading" to="." method="_on_reading_item_selected"]
[connection signal="pressed" from="ScrollContainer/Button/MarginContainer/VBoxContainer/Info/AddListButton" to="." method="_on_add_list_button_pressed"]
[connection signal="value_changed" from="ScrollContainer/Button/MarginContainer/VBoxContainer/Info/Stars" to="." method="_on_stars_value_changed"]
[connection signal="pressed" from="ScrollContainer/Button/MarginContainer/VBoxContainer/Buttons/EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="ScrollContainer/Button/MarginContainer/VBoxContainer/Buttons/DeleteButton" to="." method="_on_delete_button_pressed"]
